# skyblockparser

./: MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.py
api/: api.js
skyblockparser/: __init__.py  auctionhouse.py  constants.py  levels.py  pets.py  profile.py
skyblockparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
util/: __init__.py  constants.py  exceptions.py  profile.py  renderer.py
